# universal-karaoke-scraper

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/universal_karaoke_scraper/: __about__.py  __init__.py
tests/: __init__.py
